--- a/themes/workshop/bin/css/style.css
+++ b/themes/workshop/bin/css/style.css
@@ -413,7 +413,7 @@ img{
 
 .main-header .header-top{
     position:relative;
-    background-color:#fb4848;
+    background-color:#005e9c;
 }
 
 .main-header .header-top .inner-container{
@@ -629,7 +629,7 @@ img{
     top:0px;
     width:100%;
     z-index:5;
-    background-color:#222222;
+    background-color:#57585a;
 }
 
 /*=== Main Menu ===*/
