--- a/themes/site/assets/css/style.css
+++ b/themes/site/assets/css/style.css
@@ -39,7 +39,11 @@
 }
 
 .bg-partnership{
-    background-color: #8EB71E !important
+    background-color: #005e9c !important
+}
+
+.page-sidebar a:visited, .page-sidebar button:visited, .page-sidebar a:focus, .page-sidebar button:focus {
+    color: white;
 }
 
 .btn-portal{
