--- a/themes/workshop/bin/css/theme-skin-color-set-1.css
+++ b/themes/workshop/bin/css/theme-skin-color-set-1.css
@@ -68,7 +68,7 @@ COLOR CODE2: #F2184F
 .bg-theme-color-2,
 .line-bottom:after,
 .line-bottom-center:after {
-  background: #F2184F !important;
+  background: #005e9c !important;
 }
 .team-block .team-thumb .styled-icons a:hover,
 .work-gallery .gallery-thumb .styled-icons a:hover,
