--- a/themes/workshop/bin/css/style.css
+++ b/themes/workshop/bin/css/style.css
@@ -16211,3 +16211,8 @@ display:none;
 .text-color-workshop{
     color:#00b096;
 }
+
+.title-interno.line-bottom:after {
+    bottom: -15px;
+    width: 100%;
+}
